# 0

./: CMakeLists.txt  Hello world.cpp  README.md  makefile  test.cpp
.github/workflows/: cmake-multi-platform.yml
Perceptron/: CMakeLists.txt  IO.cpp  IO.hpp  build.sh  makefile  read_dataset.cpp  read_dataset_images.sh  read_dataset_labels.sh
tensor/: matvec.hpp  tensor.hpp  test_matvec.cpp  test_tensor.cpp
